--- a/Disaheim/DisaheimTest/DisaheimTest.csproj
+++ b/Disaheim/DisaheimTest/DisaheimTest.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Disaheim\Disaheim.csproj" />
+    <ProjectReference Include="..\UtilityLib\UtilityLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
